objects/copado__Promoted_User_Story__c.object
<CustomObject>
    <fields>
        <fullName>Destination_Environment_Record_ID__c</fullName>
        <formula>copado__Promotion__r.copado__Destination_Environment__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Environment Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Promotion_Environment_Name__c</fullName>
        <formula>copado__Promotion__r.copado__Destination_Environment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Promotion Environment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Promotion_Environment__c</fullName>
        <formula>copado__Promotion__r.copado__Destination_Environment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Destination Promotion Environment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_CBM__c</fullName>
        <formula>copado__User_Story__r.copado__Exclude_From_CBM__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exclude from CBM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Exclude_from_CBM_for_User_Stories_Behind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclude from CBM for User Stories Behind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Apex__c</fullName>
        <formula>copado__User_Story__r.copado__Has_Apex_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Apex</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_back_promotion__c</fullName>
        <formula>copado__Promotion__r.copado__Back_Promotion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is back promotion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pipeline_Name__c</fullName>
        <formula>copado__User_Story__r.copado__Project__r.copado__Deployment_Flow__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Deployment_Created_Date__c</fullName>
        <formula>IF(
 AND(ISPICKVAL(copado__Promotion__r.copado__Status__c, &apos;Completed&apos;),ISPICKVAL(copado__Promotion__r.copado__Destination_Environment__r.copado__Type__c, &apos;Production&apos;)),
DATETIMEVALUE(  CreatedDate ),
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Deployment Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Promotion_Created_Date__c</fullName>
        <formula>copado__Promotion__r.CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Promotion_Name__c</fullName>
        <formula>copado__Promotion__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Source_Environment_Name__c</fullName>
        <formula>copado__Promotion__r.copado__Source_Environment__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion Source Environment Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_Status_for_Flow__c</fullName>
        <label>Promotion Status for Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion_status__c</fullName>
        <description>Status of the promotion</description>
        <formula>text(copado__Promotion__r.copado__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotion status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Environment_Record_ID__c</fullName>
        <formula>copado__Promotion__r.copado__Source_Environment__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Environment Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_Promotion_Environment__c</fullName>
        <formula>copado__Promotion__r.copado__Source_Environment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Source Promotion Environment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Promotion__c</fullName>
        <label>Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>Promoted User Stories</relationshipLabel>
        <relationshipName>Promoted_User_Stories</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <description>The status Outdated invalidates that this user story got promoted. The user story will be available again for automated promotions and back promotions if applicable.</description>
        <label>Active / Outdated</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Outdated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__User_Story__c</fullName>
        <label>User Story</label>
        <referenceTo>copado__User_Story__c</referenceTo>
        <relationshipLabel>User Story Promotions</relationshipLabel>
        <relationshipName>Promoted_User_Stories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Promoted User Story</label>
    <nameField>
        <label>Promoted User Story Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promoted User Stories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>